fixed no coffee spacing

--- a/react-app/src/components/allCoffee/allCoffee.css
+++ b/react-app/src/components/allCoffee/allCoffee.css
@@ -13,7 +13,7 @@
 }
 
 .no-coffee-container {
-    width: 1224px;
+    width: 100%;
     text-align: center;
 }
 
